# abrasive-cli

./: Cargo.toml
certs/: server.crt
cli/: Cargo.toml  README
cli/.github/workflows/: release.yml
cli/src/: agent.rs  auth.rs  errors.rs  lib.rs  main.rs  platform.rs  tags.rs  tls.rs
protocol/: Cargo.toml  README.md
protocol/src/: errors.rs  lib.rs
src/: main.rs
