[package]
name = "abrasive-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "color", "help"] }
thiserror = "2.0.18"
abrasive-protocol = { path = "../protocol" }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
blake3 = "1"
ignore = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
rayon = "1"
tungstenite = "0.23"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"