[package]
name = "abrasive"
version = "0.0.1"
edition = "2024"
description = "Simple remote cargo CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Clavigers/abrasive-cli"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive", "color", "help"] }
thiserror = "2.0.18"
abrasive-protocol = { path = "../protocol", version = "0.0.1" }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
blake3 = "1"
ignore = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
rayon = "1"
tungstenite = "0.23"
zstd = "0.13"